--- a/web-project/CSS/indexStyle.css
+++ b/web-project/CSS/indexStyle.css
@@ -7,10 +7,14 @@ box-sizing: border-box;
 
 body{
     height: 100vh;
-    background-image:url('../Media/Background.jpg');
+    background-image:url('Background.jpg');
     background-size: cover;
     background-position: center;
     font-family: 'Montserrat', sans-serif;
+    color:white;
+    display: flexbox;
+
+
 }
 
 li{
@@ -142,7 +146,97 @@ display: none;
 
 }
 
-/* RESPONSIVE DESIGN*/
+.title{
+    color:white;
+    flex-direction: column;
+    align-items: center;
+    margin:0;
+    text-align: center;
+  /*margin-top: 10px;*/
+    margin-top: 178px;
+}
+
+.subtitle{
+
+    color:white;
+    flex-direction: column;
+    align-items: center;
+    margin:0;
+    text-align: center;
+    margin-bottom: 180px;
+
+}
+
+.desc p{
+    color:white;
+    text-align: center;
+    
+}
+
+/* TIMER DESIGN */
+
+.countdown{
+    display:flex;
+    transform:scale(2) ;
+}
+
+.time{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin:15px;
+    color:#FFCD3C
+}
+
+.time h2{
+    font-weight:bold;
+    font-size: 36px;
+    line-height: 1;
+    margin: 0 0 5px;
+}
+
+@media(max-width:576px){
+    h1{
+        font-size: 45px;
+
+    }
+
+    .time{
+        margin:5px;
+
+    }
+
+    .time h2{
+        font-size:12px;
+    }
+   
+    .time small{
+        font-size:10px;
+    }
+}
+
+
+@media(max-width:992px){
+    h1{
+        font-size: 60px;
+
+    }
+
+    .time{
+        margin:8px;
+
+    }
+
+    .time h2{
+        font-size:20px;
+    }
+   
+    .time small{
+        font-size:15px;
+    }
+}
+/* RESPONSIVE NAV DESIGN*/
 
 @media(max-width:992px){
     .navbar .register,
@@ -156,32 +250,157 @@ display: none;
 .dropdown-menu{
     display:block;
 }
+.dropdown-menu{
+    left:2rem;
+    width:unset;
+}
 }
 
 @media(max-width:576px){
+    .navbar .register,
+    .navbar .pages{
+    display:none;
+    
+    }
+.navbar .btn{
+    display:block;
 
+}
+.dropdown-menu{
+    display:block;
+}
     .dropdown-menu{
         left:2rem;
         width:unset;
+    }
+}
+
+@media(max-width:768px){
+    .navbar .register,
+    .navbar .pages{
+    display:none;
+    }
+.navbar .btn{
+    display:block;
+
+}
+.dropdown-menu{
+    display:block;
+
+}
+
+.dropdown-menu{
+    left:2rem;
+    width:unset;
+}
+
+}
+
+
+    /*responsive footer*/
+
+    footer{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right:0;
+        background-color: transparent;
+        height: auto;
+        padding-top: 40px;
+        width: 100vw;
+    }
+    
+    .footer-content{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    
+    }
+
+    .footer-content p {
+        max-width: 500px;
+        margin:10px auto;
+        line-height: 28px;
+        font-size:14px;
+    }
+
+    #copyright {
+        margin-top: 50px;
+        color:#fff
+    }
+
+.socials{
+    list-style: none;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+
+}
+
+.socials li{
+    margin:0 10px;
+}
+
+.footer-content a li {
+    text-decoration: none;
+    color:#fff;
+    border:1.1px solid white;
+    padding:8px;
+    border-radius:50%;
+    width: 35px;
+
+}
+
+.footer-content a:hover{
+    background-color: transparent;
+}
+
+.copyright{
+    color: #fff;
+}
+
+
+/*making footer responsive*/
+@media (max-width:992px){
+    .footer-content{
+        display:inline;
+    }
+
+    .footer-content p{
+        display: inline;
+    }
+}
+
+
+@media(max-width:768px){
+
+
+    .footer-content{
+        display:inline;
+    }
+
+    .footer-content p{
+        display: inline;
     }
 
 }
 
 
-footer a {
-    margin-right: 5px;
-}
+    @media(max-width:576px){
 
-#copyright {
-    margin-top: 50px;
-}
+        .footer-content{
+            display:inline;
+        }
+    
+        .footer-content p{
+            display: inline;
+        } 
 
-footer {
-    display: block;
-    color: whitesmoke;
-    font-size: small;
-    text-align: center;
-    padding: 50px;
-    margin-top: 500px;
+
     
 }
+
+
