--- a/web-project/CSS/indexStyle.css
+++ b/web-project/CSS/indexStyle.css
@@ -7,6 +7,9 @@ box-sizing: border-box;
 
 body{
     height: 100vh;
+    width: 100vw;
+    margin:0;
+    padding:0;
     background-image:url('Background.jpg');
     background-size: cover;
     background-position: center;
